form layout issue resolved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -231,6 +231,7 @@ button:disabled {
 /* form */
 
 .form {
+  display: block;
   width: 90vw;
   max-width: var(--fixed-width);
   background: var(--background-secondary-color);
